--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "install": "electron-rebuild"
+    "install": "electron-rebuild",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=static/icons/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . UartAssist --overwrite --asar=true --platform=win32 --arch=ia32 --icon=static/icons/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"UartAssist\"",
+    "package-linux": "electron-packager . UartAssist --overwrite --asar=true --platform=linux --arch=x64 --icon=static/icons/icon.png --prune=true --out=release-builds"
   },
   "dependencies": {
     "electron": "*",
     "serialport": "*"
   },
   "devDependencies": {
+    "electron-packager": "*",
     "electron-rebuild": "*"
   }
 }
